src/objects/Poster_Presenter__c.object
<CustomObject>
    <description>Poster Presenter to be utilized for the Fuzion (Participant) API with Freeman for the Annual Meeting. This will not be a publicly facing object to users.</description>
    <fields>
        <fullName>GRIP_Primary_Filter__c</fullName>
        <label>GRIP Primary Filter</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRIP_Secondary_Filter__c</fullName>
        <label>GRIP Secondary Filter</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presenter_Email__c</fullName>
        <label>Presenter Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Presenter_First_Name__c</fullName>
        <label>Presenter First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Last_Name__c</fullName>
        <label>Presenter Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Poster Presenter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Presenter_First_Name__c</columns>
        <columns>Presenter_Last_Name__c</columns>
        <columns>Presenter_Email__c</columns>
        <columns>GRIP_Primary_Filter__c</columns>
        <columns>GRIP_Secondary_Filter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Poster Presenter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poster Presenters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>